fix：__text-textのクラス名を修正

--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -141,9 +141,9 @@
 	}
 }
 
-.voice-card__text {}
+.voice-card__text-wrap {}
 
-.voice-card__text-text {
+.voice-card__text {
 	display: -webkit-box;
 	overflow: hidden;
 	-webkit-box-orient: vertical;
