--- a/src/sass/page/_info.scss
+++ b/src/sass/page/_info.scss
@@ -76,11 +76,11 @@
 	}
 }
 
-.info__text {
+.info__text-wrap {
 	margin-top: rem(8);
 }
 
-.info__text-text {}
+.info__text {}
 
 .info__btn {
 	margin-top: rem(40);
