--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -11,8 +11,7 @@
 	transition: opacity 0.3s ease;
 }
 
-.blog-card__img {
-}
+.blog-card__img {}
 
 .blog-card__img img {
 	aspect-ratio: 301 / 201;
@@ -66,11 +65,11 @@
 	background-color: $color-accent;
 }
 
-.blog-card__text {
+.blog-card__text-wrap {
 	margin-top: rem(16);
 }
 
-.blog-card__text-text {
+.blog-card__text {
 	display: -webkit-box;
 	overflow: hidden;
 	-webkit-box-orient: vertical;
