--- a/src/sass/module/_under-line.scss
+++ b/src/sass/module/_under-line.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
-.title-line {
+.under-line {
 	position: relative;
 }
 
-.title-line::after {
+.under-line::after {
 	position: absolute;
 	content: "";
 	bottom: 0;
