fix：footer snsの階層を修正

--- a/src/sass/page/_footer.scss
+++ b/src/sass/page/_footer.scss
@@ -47,11 +47,8 @@
 	}
 }
 
-.footer__sns {
+.footer__sns-list {
 	margin-top: rem(11);
-}
-
-.footer__sns-items {
 	display: flex;
 	column-gap: rem(16);
 
