terms-of-service：完了

--- a/src/sass/page/_layout-sub-contact.scss
+++ b/src/sass/page/_layout-sub-contact.scss
@@ -1,5 +1,9 @@
 @use "global" as *;
 
-.layout-sub-contact{
+.layout-sub-contact {
 	margin-top: rem(106);
+}
+
+.layout-sub-contact.layout-sub-contact--terms-of-service {
+	margin-top: rem(136);
 }
