--- a/src/sass/module/_terms-of-service.scss
+++ b/src/sass/module/_terms-of-service.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
-.privacy {
+.terms-of-service {
 	position: relative;
 }
 
-.privacy::before {
+.terms-of-service::before {
 	position: absolute;
 	content: "";
 	top: rem(-22);
@@ -25,7 +25,7 @@
 	}
 }
 
-.privacy__inner.inner {
+.terms-of-service__inner.inner {
 	@include mq('md') {
 		max-width: rem(850);
 	}
