--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -157,3 +157,88 @@
 		font-size: rem(40);
 	}
 }
+
+.campaign-card__pc {
+	margin-top: auto;
+	padding: 0 rem(16) rem(24);
+
+	@include mq('md') {
+		margin-top: rem(24);
+		padding: 0 rem(24) rem(43);
+	}
+}
+
+.campaign-card__text {}
+
+.campaign-card__pc-bottom {
+	margin-top: rem(32);
+	text-align: center;
+	letter-spacing: 0;
+	line-height: calc(18 / 16);
+	color: $color-accent;
+}
+
+.campaign-card__date {
+	font-size: rem(16);
+	font-family: $font-family-lato;
+	font-weight: $font-weight-bold;
+}
+
+.campaign-card__pretext {
+	margin-top: rem(9);
+	font-size: rem(14);
+	font-family: $font-family-jp-sans;
+	font-weight: $font-weight-regular;
+}
+
+.campaign-card__btn {
+	margin-top: rem(16);
+}
+
+//下層ページ
+.campaign-card--sub-page {
+	@include mq('md') {
+		width: rem(520);
+	}
+}
+
+.campaign-card__body--sub-page {
+	@include mq('md') {
+		padding: rem(24) rem(24) 0;
+	}
+}
+
+.campaign-card__title-text--sub-page {
+	@include mq('md') {
+		font-size: rem(24);
+	}
+}
+
+.campaign-card__title--sub-page {
+
+	@include mq('md') {
+		padding-bottom: rem(2);
+	}
+}
+
+.campaign-card__offer--sub-page {
+	@include mq('md') {
+		margin-top: rem(24);
+	}
+}
+
+.campaign-card__wrap--sub-page {
+	@include mq('md') {
+		justify-content: center;
+
+		margin-left: rem(0);
+		gap: rem(40);
+	}
+}
+
+.campaign-card__foot--sub-page {
+
+	@include mq('md') {
+		padding: 0 rem(24);
+	}
+}
