--- a/src/sass/module/_sub-about.scss
+++ b/src/sass/module/_sub-about.scss
@@ -29,7 +29,7 @@
 	@include mq('md') {
 		position: absolute;
 		content: "";
-		top: 10.4%;
+		top: 28.9%;
 		right: calc(50% - min(48.5vw, 40rem));
 		width: rem(301);
 		height: rem(138);
@@ -48,16 +48,51 @@
 
 .sub-about__about {}
 
-.sub-about__gallery {}
+.sub-about__gallery {
+	margin-top: rem(40);
+
+	@include mq('md') {
+		margin-top: rem(120);
+	}
+}
 
 .sub-about__section-title {}
 
-.section-title {}
+.sub-about__list {
+	margin-top: rem(43);
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: rem(8);
 
-.section-title__eng {}
+	@include mq('md') {
+		margin-top: rem(86);
+		grid-template-columns: 1fr 0.16fr 1fr;
+		grid-auto-flow: dense;
+	}
+}
 
-.section-title__ja {}
+.sub-about__item {
+	aspect-ratio: 345 / 219;
 
-.sub-about__list {}
+	@include mq('md') {
+		grid-column: span 2;
+		aspect-ratio: 580 / 369;
+	}
+}
 
-.sub-about__item {}
+.sub-about__item:nth-child(6n+1),
+.sub-about__item:nth-child(6n+6) {
+	aspect-ratio: 345 / 523;
+
+	@include mq('md') {
+		grid-row: span 2;
+		grid-column: span 1;
+		aspect-ratio: 492 / 746;
+	}
+}
+
+.sub-about__item img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
