--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -57,6 +57,7 @@ $z-index-header: 1000;
 $z-index-sp-nav: 8888;
 $z-index-logo: 9999;
 $z-index-hamburger: 10000;
+$z-index-modal: 11111;
 $z-index-loading: 20000;
 
 ////////////////////
