--- a/src/sass/module/_sub-about.scss
+++ b/src/sass/module/_sub-about.scss
@@ -96,3 +96,32 @@
 	height: 100%;
 	object-fit: cover;
 }
+
+.sub-about__item.active img {
+	object-fit: contain;
+}
+
+.sub-about__modal-background {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	max-width: 100vw;
+	background: rgba($color: #202020, $alpha: 0.8);
+	cursor: pointer;
+	z-index: $z-index-modal;
+}
+
+.sub-about__modal-background .js-modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	margin: auto;
+	width: 100%;
+	height: 100%;
+	max-width: 80vw;
+	max-height: 80vh;
+}
