--- a/src/sass/page/_layout-sub-contact.scss
+++ b/src/sass/page/_layout-sub-contact.scss
@@ -4,6 +4,10 @@
 	margin-top: rem(106);
 }
 
+.layout-sub-contact--sub-price {
+	margin-top: rem(137);
+}
+
 .layout-sub-contact.layout-sub-contact--terms-of-service {
 	margin-top: rem(136);
 }
