--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -59,6 +59,14 @@
 	}
 }
 
+.sub-mv--site-map {
+	background-image: url(../images/sub/sub-mv_site-map_sp.jpg);
+
+	@include mq('md') {
+		background-image: url(../images/sub/sub-mv_site-map_pc.jpg);
+	}
+}
+
 .sub-mv.sub-mv--page-contact {
 	background-image: url(../images/sub/sub-mv_contact_sp.jpg);
 
