--- a/src/sass/page/_layout-sub-contact.scss
+++ b/src/sass/page/_layout-sub-contact.scss
@@ -8,6 +8,13 @@
 	margin-top: rem(137);
 }
 
+.layout-sub-contact--site-map{
+	margin-top: rem(98);
+	@include mq('md') {
+		margin-top: rem(140);
+	}
+}
+
 .layout-sub-contact.layout-sub-contact--terms-of-service {
 	margin-top: rem(136);
 }
