--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -10,14 +10,24 @@
 	display: inline-block;
 	transition: opacity 0.3s ease;
 }
+.blog-card__link:hover{
+	opacity: 1;
+}
 
-.blog-card__img {}
+.blog-card__link:hover .blog-card__img img {
+	scale: 1.2;
+}
+
+.blog-card__img {
+	overflow: hidden;
+}
 
 .blog-card__img img {
 	aspect-ratio: 301 / 201;
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
+	transition: scale 0.3s;
 }
 
 .blog-card__body {
@@ -74,4 +84,19 @@
 	overflow: hidden;
 	-webkit-box-orient: vertical;
 	-webkit-line-clamp: 5;
+}
+
+.blog-card--aside .blog-card__link {
+	padding: rem(16);
+	display: grid;
+	gap: rem(16);
+	grid-template-columns: 1fr 1.03fr;
+}
+
+.blog-card--aside .blog-card__body {
+	margin-top: rem(0);
+}
+
+.blog-card--aside .blog-card__img img {
+	aspect-ratio: 121 / 90;
 }
