--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -6,7 +6,6 @@
 	grid-template-columns: 1fr;
 
 	@include mq('md') {
-		margin-top: rem(85);
 		column-gap: rem(40);
 		row-gap: rem(80);
 		justify-content: space-between;
@@ -15,3 +14,9 @@
 }
 
 .blog-cards__card {}
+
+.blog-cards.blog-cards--sub-page {
+	@include mq('md') {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
