--- a/src/sass/module/_campaign-cards.scss
+++ b/src/sass/module/_campaign-cards.scss
@@ -9,11 +9,19 @@
 
 .campaign-cards--sub-page {
 	grid-auto-flow: initial;
-	display: grid;
 	gap: rem(40);
 
 	@include mq('md') {
 		grid-template-columns: 1fr 1fr;
 		gap: rem(80) rem(40);
+	}
+}
+
+.campaign-cards.campaign-cards--sub-home {
+	grid-auto-flow: row;
+	gap: rem(40);
+
+	@include mq('md') {
+		grid-template-columns: 1fr;
 	}
 }
