fix：魚のあしらいを共通クラス化

--- a/src/sass/module/_sub-about.scss
+++ b/src/sass/module/_sub-about.scss
@@ -1,29 +1,6 @@
 @use "global" as *;
 
-.sub-about {
-	position: relative;
-}
-
-.sub-about::before {
-	position: absolute;
-	content: "";
-	top: rem(-22);
-	left: calc(50% - min(46.1vw, rem(286)));
-	width: rem(120);
-	height: rem(55);
-	background-image: url('../images/common/img-fish.svg');
-	background-repeat: no-repeat;
-	background-size: contain;
-	background-position: center center;
-	transform: scaleX(-1);
-
-	@include mq('md') {
-		top: rem(-69);
-		left: calc(50% - min(48.5vw, rem(620)));
-		width: rem(301);
-		height: rem(138);
-	}
-}
+.sub-about {}
 
 .sub-about::after {
 	@include mq('md') {
