fix：campaign-swiperの変更
・ver.8 -> ver.9へ
・カードの幅指定を解除
・script.jsで表示調整

--- a/src/sass/module/_campaign-cards.scss
+++ b/src/sass/module/_campaign-cards.scss
@@ -5,7 +5,13 @@
 	grid-auto-flow: column;
 }
 
-.campaign-cards__card {}
+.campaign-cards__card {
+	max-width: rem(280);
+
+	@include mq('md') {
+		max-width: rem(333);
+	}
+}
 
 .campaign-cards--sub-page {
 	grid-auto-flow: initial;
