--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -190,36 +190,32 @@
 }
 
 //下層ページ
-.campaign-card--sub-page {
-	width: 100%;
-}
-
-.campaign-card__body--sub-page {
+.campaign-card--sub-page .campaign-card__body {
 	@include mq('md') {
 		padding: rem(24) rem(24) 0;
 	}
 }
 
-.campaign-card__title-text--sub-page {
+.campaign-card--sub-page .campaign-card__title-text {
 	@include mq('md') {
 		font-size: rem(24);
 	}
 }
 
-.campaign-card__title--sub-page {
+.campaign-card--sub-page .campaign-card__title {
 
 	@include mq('md') {
 		padding-bottom: rem(2);
 	}
 }
 
-.campaign-card__offer--sub-page {
+.campaign-card--sub-page .campaign-card__offer {
 	@include mq('md') {
 		margin-top: rem(24);
 	}
 }
 
-.campaign-card__wrap--sub-page {
+.campaign-card--sub-page .campaign-card__wrap {
 	margin-left: rem(0);
 	justify-content: center;
 	gap: rem(18);
@@ -230,7 +226,7 @@
 	}
 }
 
-.campaign-card__foot--sub-page {
+.campaign-card--sub-page .campaign-card__foot {
 
 	@include mq('md') {
 		padding: 0 rem(24);
