--- a/src/sass/module/_sub-blog.scss
+++ b/src/sass/module/_sub-blog.scss
@@ -12,22 +12,32 @@
 	}
 }
 
-.sub-blog__main {}
+.sub-blog__main {
+	padding-left: rem(6);
+	padding-right: rem(6);
+
+	@include mq('md') {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
 
 .sub-blog__cards {}
 
 .sub-blog__wp-pagenavi {
 	margin-top: rem(80);
+	margin-left: rem(-6);
+	margin-right: rem(-6);
 }
 
 .sub-blog__aside {
 	margin-top: rem(80);
-	// margin-left: auto;
-	// margin-right: auto;
-	max-width: rem(294);
+	padding-left: rem(25);
+	padding-right: rem(25);
 
 	@include mq('md') {
 		margin-top: 0;
-		max-width: 100%;
+		padding-left: 0;
+		padding-right: 0;
 	}
 }
