--- a/src/sass/page/_layout-sub-blog.scss
+++ b/src/sass/page/_layout-sub-blog.scss
@@ -7,3 +7,11 @@
 		margin-top: rem(141);
 	}
 }
+
+.layout-sub-blog.layout-sub-blog--post {
+	margin-top: rem(41);
+
+	@include mq('md') {
+		margin-top: rem(140);
+	}
+}
