--- a/src/sass/page/_layout-sub-contact.scss
+++ b/src/sass/page/_layout-sub-contact.scss
@@ -4,6 +4,12 @@
 	margin-top: rem(106);
 }
 
+.layout-sub-contact.layout-sub-contact--sub-info {
+	@include mq('md') {
+		margin-top: rem(137);
+	}
+}
+
 .layout-sub-contact.layout-sub-contact--sub-blog {
 	@include mq('md') {
 		margin-top: rem(137);
