temp：下層Info：他ページからの遷移

--- a/src/sass/module/_sub-info.scss
+++ b/src/sass/module/_sub-info.scss
@@ -1,6 +1,12 @@
 @use "global" as *;
 
-.sub-info {}
+.sub-info {
+	scroll-padding-top: rem(80);
+
+	@include mq('md') {
+		scroll-padding-top: rem(90);
+	}
+}
 
 .sub-info__inner {}
 
