temp：page-contact：buttonまで

--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -42,6 +42,7 @@ $color-white: #fff;
 
 $color-accent: #408F95;
 $color-brown: #796A64;
+$color-red: #C94800;
 
 $color-gray: #000;
 $color-lightgreen: #DDF0F1;
