--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -13,6 +13,14 @@
 	}
 }
 
+.footer.footer--sub-contact {
+	margin-top: rem(147);
+
+	@include mq('md') {
+		margin-top: rem(165);
+	}
+}
+
 .footer.footer--error-page {
 	@include mq('md') {
 		margin-top: rem(80);
