--- a/src/sass/module/_sub-contact.scss
+++ b/src/sass/module/_sub-contact.scss
@@ -2,12 +2,17 @@
 
 .sub-contact {}
 
-.sub-contact__inner {}
+.sub-contact__inner.inner {
+	@include mq('md') {
+		max-width: rem(750);
+	}
+}
 
 .sub-contact__error {
 	padding-left: 1em;
 	display: flex;
 	justify-content: center;
+	display: none;
 
 	@include mq('md') {
 		padding-left: 0;
@@ -31,5 +36,5 @@
 }
 
 .sub-contact__content {
-	margin-top: rem(40);
+	margin-top: rem(41);
 }
