--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -1,7 +1,6 @@
 @use "global" as *;
 
 .header {
-
 	height: rem(80);
 	background-color: rgba($color: $color-black, $alpha: 0.68);
 	transition: background-color 0.3s ease;
@@ -12,11 +11,9 @@
 }
 
 .header__inner {
-
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: rem(15);
-	padding-right: rem(21);
 
 	display: flex;
 	justify-content: space-between;
@@ -25,7 +22,6 @@
 
 	@include mq('md') {
 		padding-left: rem(40);
-		padding-right: rem(20);
 	}
 
 }
@@ -42,7 +38,6 @@
 
 .header__logo {
 	width: rem(102);
-
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
@@ -53,10 +48,63 @@
 }
 
 .header__hamburger {
+	margin: 0;
+	padding: 0;
+	outline: none;
+	border: none;
+	position: relative;
+	z-index: $z-index-hamburger;
+	width: rem(62);
+	height: inherit;
+	cursor: pointer;
+	transition: .3s;
 
-	@include mq('md') {
+	@include mq("md") {
 		display: none;
 	}
+}
+
+.header__hamburger.is-open {}
+
+.header__hamburger span {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+	display: block;
+	width: rem(32);
+	height: 1px;
+	background-color: $color-white;
+	transition: .3s;
+}
+
+.header__hamburger span:nth-of-type(1) {
+	top: rem(-12);
+}
+
+.header__hamburger span:nth-of-type(2) {
+	top: 0;
+}
+
+.header__hamburger span:nth-of-type(3) {
+	top: rem(12);
+}
+
+.header__hamburger.is-active span {
+	width: rem(40);
+}
+
+.header__hamburger.is-active span:nth-of-type(1) {
+	top: rem(1);
+	transform: translateX(-50%) rotate(216deg);
+}
+
+.header__hamburger.is-active span:nth-of-type(2) {
+	opacity: 0;
+}
+
+.header__hamburger.is-active span:nth-of-type(3) {
+	top: rem(-1);
+	transform: translateX(-50%) rotate(-216deg);
 }
 
 .header__pc-nav {
@@ -70,7 +118,6 @@
 
 .header__sp-nav {
 	padding-top: rem(80);
-
 	width: 100%;
 	height: 100vh;
 	position: fixed;
@@ -79,7 +126,6 @@
 	background-color: $color-accent;
 	z-index: $z-index-sp-nav;
 	opacity: 0;
-
 	transform: translateX(-105%);
 	transition: transform 0.5s ease, opacity 0.5s ease;
 }
