--- a/src/sass/page/_layout-sub-privacy.scss
+++ b/src/sass/page/_layout-sub-privacy.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
-.layout-campaign {
+.layout-sub-privacy {
 	margin-top: rem(44);
 
 	@include mq('md') {
-		margin-top: rem(120);
+		margin-top: rem(141);
 	}
 }
