--- a/src/sass/page/_layout-sub-thanks.scss
+++ b/src/sass/page/_layout-sub-thanks.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.layout-info {
-	margin-top: rem(73);
+.layout-sub-thanks {
+	margin-top: rem(41);
 
 	@include mq('md') {
 		margin-top: rem(140);
