--- a/src/sass/page/_layout-top-about.scss
+++ b/src/sass/page/_layout-top-about.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.layout-site-map {
-	margin-top: rem(35);
+.layout-top-about {
+	margin-top: rem(77);
 
 	@include mq('md') {
 		margin-top: rem(133);
