--- a/src/sass/page/_layout-top-campaign.scss
+++ b/src/sass/page/_layout-top-campaign.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
-.layout-terms-of-service {
+.layout-top-campaign {
 	margin-top: rem(44);
 
 	@include mq('md') {
-		margin-top: rem(141);
+		margin-top: rem(120);
 	}
 }
