--- a/src/sass/page/_layout-top-contact.scss
+++ b/src/sass/page/_layout-top-contact.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.layout-sub-contact {
-	margin-top: rem(106);
+.layout-top-contact {
+	margin-top: rem(80);
 
 	@include mq('md') {
 		margin-top: rem(137);
