--- a/src/sass/page/_layout-top-info.scss
+++ b/src/sass/page/_layout-top-info.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
-.layout-page-thanks {
-	margin-top: rem(41);
+.layout-top-info {
+	margin-top: rem(73);
 
 	@include mq('md') {
 		margin-top: rem(140);
