clean：sub-mvの整理

--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -11,7 +11,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-campaign {
+.sub-mv.sub-mv--campaign {
 	background-image: url(../images/sub/sub-mv_campaign_sp.jpg);
 
 	@include mq('md') {
@@ -19,7 +19,7 @@
 	}
 }
 
-.sub-mv.sub-mv--page-sub-about {
+.sub-mv.sub-mv--about {
 	background-image: url(../images/sub/sub-mv_about_sp.jpg);
 
 	@include mq('md') {
@@ -27,7 +27,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-info {
+.sub-mv.sub-mv--info {
 	background-image: url(../images/sub/sub-mv_info_sp.jpg);
 
 	@include mq('md') {
@@ -35,7 +35,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-blog {
+.sub-mv.sub-mv--blog {
 	background-image: url(../images/sub/sub-mv_blog_sp.jpg);
 
 	@include mq('md') {
@@ -43,7 +43,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-voice {
+.sub-mv.sub-mv--voice {
 	background-image: url(../images/sub/sub-mv_voice_sp.jpg);
 
 	@include mq('md') {
@@ -51,7 +51,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-price {
+.sub-mv.sub-mv--price {
 	background-image: url(../images/sub/sub-mv_price_sp.jpg);
 
 	@include mq('md') {
@@ -59,7 +59,7 @@
 	}
 }
 
-.sub-mv.sub-mv--sub-faq {
+.sub-mv.sub-mv--faq {
 	background-image: url(../images/sub/sub-mv_faq_sp.jpg);
 
 	@include mq('md') {
@@ -67,7 +67,7 @@
 	}
 }
 
-.sub-mv.sub-mv--page-contact {
+.sub-mv.sub-mv--contact {
 	background-image: url(../images/sub/sub-mv_contact_sp.jpg);
 
 	@include mq('md') {
