--- a/src/sass/module/_sub-about.scss
+++ b/src/sass/module/_sub-about.scss
@@ -23,4 +23,127 @@
 	}
 }
 
-.sub-about__about {}
+.about__images {
+	margin-top: rem(31);
+
+	@include mq('md') {
+		margin-top: rem(45);
+	}
+}
+
+.about__image-small {
+	position: relative;
+	width: calc(128 / $calc-inner-sp * 100%);
+	display: none;
+
+	@include mq('md') {
+		display: block;
+	}
+}
+
+.about__image-small img {
+	aspect-ratio: 128 / 194;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+
+	@include mq('md') {
+		aspect-ratio: 400 / 606;
+	}
+}
+
+.about__image-large {
+	width: calc(281 / $calc-inner-sp * 100%);
+	margin-top: 0;
+	margin-left: 0;
+	width: 100%;
+
+	@include mq('md') {
+		margin-top: -48.8%;
+		margin-left: auto;
+		width: calc(281 / $calc-inner-sp * 100%);
+	}
+}
+
+.about__image-large img {
+	aspect-ratio: 281 / 186;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+
+	@include mq('md') {
+		aspect-ratio: 880 / 581;
+	}
+}
+
+.about__content {
+	margin-top: rem(40);
+
+	@include mq('md') {
+		margin-top: 0;
+		position: absolute;
+		display: flex;
+
+		width: 72.18%;
+		// top: 40%;
+		top: 30.6%;
+		left: 19.8%;
+	}
+}
+
+.about__subtitle {
+	width: 100%;
+	position: absolute;
+	top: 5.4%;
+	left: calc(50% - min(39.6vw, rem(256)));
+
+	@include mq('md') {
+		position: initial;
+		top: 0;
+		left: 0;
+		width: 50%;
+	}
+}
+
+.about__subtitle-text {
+	font-family: $font-family-eng;
+	font-size: rem(40);
+	font-weight: $font-weight-regular;
+	letter-spacing: 0;
+	line-height: 1;
+	color: $color-white;
+
+	@include mq('md') {
+		font-size: rem(80);
+		color: $color-white;
+		line-height: calc(100 / 80);
+	}
+}
+
+.about__body {
+	margin-top: rem(16);
+
+	@include mq('md') {
+		margin-top: rem(24);
+		margin-left: rem(41);
+		width: 50%;
+	}
+}
+
+.about__text-wrap {}
+
+.about__text {
+	@include mq('md') {
+		color: $color-white;
+		text-align: justify;
+	}
+}
+
+.about__btn {
+	margin-top: rem(50);
+	text-align: center;
+
+	@include mq('md') {
+		margin-top: rem(40);
+	}
+}
