--- a/src/sass/module/_sub-blog.scss
+++ b/src/sass/module/_sub-blog.scss
@@ -58,45 +58,48 @@
 	}
 }
 
+.sub-blog__post {}
+
+.sub-blog__meta {}
+
+.sub-blog__time {
+	font-family: $font-family-eng;
+	font-size: rem(14);
+	font-weight: $font-weight-regular;
+	letter-spacing: 0;
+	line-height: 1;
+	color: $color-text;
+	vertical-align: super;
+}
+
+.sub-blog__title {
+	margin-top: rem(4);
+	padding-bottom: rem(3);
+	position: relative;
+	font-family: $font-family-jp-sans;
+	font-size: rem(24);
+	font-weight: $font-weight-medium;
+	letter-spacing: 0;
+	color: $color-text;
+
+	@include mq('md') {
+		margin-top: rem(2);
+		padding-bottom: 0;
+		font-size: rem(32);
+	}
+}
+
+.sub-blog__title::after {
+	position: absolute;
+	content: "";
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background-color: $color-accent;
+}
+
 .sub-blog__post {
-	time {
-		font-family: $font-family-eng;
-		font-size: rem(14);
-		font-weight: $font-weight-regular;
-		letter-spacing: 0;
-		line-height: 1;
-		color: $color-text;
-		vertical-align: super;
-	}
-
-	h2 {
-		margin-top: rem(4);
-		padding-bottom: rem(3);
-		position: relative;
-		font-family: $font-family-jp-sans;
-		font-size: rem(24);
-		font-weight: $font-weight-medium;
-		letter-spacing: 0;
-		// line-height: calc( / );
-		color: $color-text;
-
-		@include mq('md') {
-			margin-top: rem(2);
-			padding-bottom: 0;
-			font-size: rem(32);
-		}
-	}
-
-	h2::after {
-		position: absolute;
-		content: "";
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 1px;
-		background-color: $color-accent;
-	}
-
 	img {
 		margin-top: rem(24);
 
