--- a/src/sass/module/_sub-blog.scss
+++ b/src/sass/module/_sub-blog.scss
@@ -161,7 +161,23 @@
 	background-color: $color-accent;
 }
 
-.sub-blog__post {
+.sub-blog__thumbnail {
+	margin-top: rem(24);
+	aspect-ratio: 345 / 231;
+
+	@include mq('md') {
+		margin-top: rem(40);
+		aspect-ratio: 700 / 468;
+	}
+}
+
+.sub-blog__thumbnail img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+
+.sub-blog__content {
 	img {
 		margin-top: rem(24);
 
@@ -193,8 +209,8 @@
 
 		li {
 			padding-left: rem(27);
-			background-image: url('../images/common/icon_starfish_green.png');
-			background-position: center left;
+			background-image: url('../images/common/icon_starfish_green.svg');
+			background-position: top 0.2em left;
 			background-repeat: no-repeat;
 			background-size: rem(18) rem(18);
 			font-family: $font-family-jp-sans;
