--- a/src/sass/module/_sub-campaign.scss
+++ b/src/sass/module/_sub-campaign.scss
@@ -4,6 +4,8 @@
 
 .sub-campaign__inner {}
 
+.sub-campaign__category {}
+
 .sub-campaign__contents {
 	padding-left: rem(32);
 	padding-right: rem(32);
